# spencer-yolo

./: .gitignore  README.md
spencer_people_tracking/detection/laser_detectors/srl_laser_detectors/launch/: learned_detector_with_segmentation.launch
spencer_people_tracking/detection/laser_detectors/static_calibration/: CMakeLists.txt  README.md  package.xml
spencer_people_tracking/detection/laser_detectors/static_calibration/launch/: static_calibration.launch
spencer_people_tracking/detection/laser_detectors/static_calibration/src/: static_calibration_laser_detections.cpp
spencer_people_tracking/detection/rgbd_detectors/rwth_upper_body_detector/config/: config_realsense.inp
spencer_people_tracking/detection/rgbd_detectors/rwth_upper_body_detector/launch/: jackal_upper_body_detector.launch  upper_body_detector.launch
spencer_people_tracking/detection/rgbd_detectors/rwth_upper_body_detector/src/: main.cpp  main.cpp.orig
spencer_people_tracking/detection/spencer_detected_person_association/launch/: aggregate_all.launch  aggregate_high_recall_lasers.launch  aggregate_lasers.launch  aggregate_rgbd_ground_hog.launch  aggregate_rgbd_upper_body.launch  aggregate_rgbd_yolo.launch  detection_to_detection_fusion_pipeline.launch  fuse_config.yaml  fuse_lasers_and_rgbd.launch
spencer_people_tracking/detection/spencer_detected_person_association/src/spencer_detected_person_association/: euclidean_nn_fuser.cpp
spencer_people_tracking/detection/zed_yolo_detector/: CMakeLists.txt  LICENSE  README.md  package.xml
spencer_people_tracking/detection/zed_yolo_detector/launch/: zed_yolo_detector.launch
spencer_people_tracking/detection/zed_yolo_detector/src/: fill_detected_person_message.cpp
spencer_people_tracking/launch/spencer_people_tracking_launch/: package.xml
spencer_people_tracking/launch/spencer_people_tracking_launch/launch/: tracking_on_realsense.launch  tracking_with_yolo.launch
spencer_people_tracking/launch/spencer_people_tracking_launch/launch/detectors/: front_rgbd_detectors.launch  yolo_front_rgbd_detectors.launch  yolo_laser_detectors.launch  yolo_leg_detectors.launch
spencer_people_tracking/launch/spencer_people_tracking_launch/launch/tracking/: filter_tracks.launch  freiburg_people_tracking.launch
spencer_people_tracking/launch/spencer_people_tracking_launch/rviz/: tracking-rgbd-laser.rviz  tracking-single-rgbd-sensor.rviz
spencer_people_tracking/messages/rwth_perception_people_msgs/msg/: GroundPlane.msg
spencer_people_tracking/messages/spencer_tracking_msgs/: CMakeLists.txt
spencer_people_tracking/messages/spencer_tracking_msgs/msg/: DetectedPerson.msg  TrajectoryPredictionAPG.msg  TrajectoryPredictionAPGs.msg  TrajectoryPredictionLocalVelocity.msg  TrajectoryPredictionsLocalVelocities.msg
spencer_people_tracking/realsense_spencer/: CMakeLists.txt  package.xml
spencer_people_tracking/realsense_spencer/launch/: rs_d400_custom.launch
spencer_people_tracking/realsense_spencer/src/: realsense_spencer_adaptor.py
spencer_people_tracking/tracking/people/spencer_tracking_utils/src/spencer_tracking_utils/: filter_visually_confirmed_tracks.cpp
spencer_people_tracking/tracking/people/srl_nearest_neighbor_tracker/launch/params/: occlusion_geodesics_manager_dynamic.yaml
spencer_people_tracking/tracking/people/srl_nearest_neighbor_tracker/src/srl_nearest_neighbor_tracker/ros/: geometry_utils.cpp
spencer_people_tracking/trajectory_prediction/: CMakeLists.txt  README.md  package.xml
spencer_people_tracking/trajectory_prediction/launch/: trajectory_prediction.launch
spencer_people_tracking/trajectory_prediction/src/: trajectory_prediction_infos.cpp
spencer_people_tracking/utils/rwth_ground_plane/launch/: ground_plane_estimated.launch  ground_plane_tf_based_fixed.launch
spencer_people_tracking/utils/rwth_ground_plane/src/: estimated_gp.cpp  tf_based_fixed_gp.cpp
zed-yolo/: README.md
zed-yolo/libdarknet/: darknet  uselib
zed-yolo/yolo_pedestrian_detector/: CMakeLists.txt  README.md  package.xml
zed-yolo/yolo_pedestrian_detector/launch/: pedestrian_detector.launch  pedestrian_detector_tiny.launch
zed-yolo/yolo_pedestrian_detector/src/: main.cpp
